       EVAS_GL_API_DEBUG=1 and when it is set, all the GL calls will check
       if make_current has been properly called.  Also, it'll check if all
       the GL calls are called within the Pixel Getter function for Direct
       Rendering option.

2012-10-09 Daniel Zaoui and Tom Hacohen

	* Evas: change Evas to use Eo.
	This change adds Eo support to Evas while keeping the old API intact.
	For more information, go to Eo.

2012-10-10  Carsten Haitzler (The Rasterman)

       * Fix font sizing issues when size scaling happens to down down
       when it should round up. happens in rare sizing situations and fonts.

2012-10-11 Sohyun Kim 

       * Fix texture size issues when the image has nv12 format

2012-10-11  Carsten Haitzler (The Rasterman)

       * Fix C code fallback line rendering path in software

2012-10-16  Carsten Haitzler (The Rasterman)

       * Like 16bpp engine, 8bpp engine goes the way of the dodo.

2012-10-16  ChunEon Park (Hermet)

       * Fix the vertical line drawing on gl backened.

2012-10-18  ChunEon Park (Hermet)

       * Update move event when object freeze event is off.

2012-10-19  ChunEon Park (Hermet)

       * Added Proxy'source visibility set APIs

2012-10-23  Carsten Haitzler (The Rasterman)

       * Fix possible segfault in gl engine if image->im is null in
       image size set.

2012-10-24  ChunEon Park (Hermet)

       * Added Proxy'source events set APIs.

2012-10-25  Cedric Bail

       * Make XPM loader faster.

2012-10-25  ChunEon Park (Hermet)

       * Added Evas_Coord_Size, Evas_Coord_Precision_Size type.

2012-10-26  ChunEon Park (Hermet)

       * Fixed event multi move memory leak.

2012-10-30  Sung W. Park (sung_)

       * Fix clip bug while computing coordinates for Evas GL
       direct rendering optimization.
 
2012-11-02  Carsten Haitzler (The Rasterman)

       * Fix evas textblock tag parser to respect escaped spaces and
         escaped single quotes. This fixes an edje text class restyling bug.